--- a/src/SideBar.css
+++ b/src/SideBar.css
@@ -5,6 +5,7 @@
   border-radius: 10px;
   height: fit-content;
   text-align: center;
+  max-width: 232px
 }
 
 .sidebar__avatar {
@@ -75,4 +76,31 @@
   border: 1px solid lightgray;
   border-radius: 10px;
   margin-top: 10px;
+}
+
+.sidebar__recentItem {
+  display: flex;
+  font-size: 13px;
+  cursor: pointer;
+  color: gray;
+  font-weight: bolder;
+  margin-bottom: 5px;
+  padding: 5px;
+}
+
+.sidebar__recentItem:hover {
+  background-color: whitesmoke;
+  border-radius: 10px;
+  cursor: pointer;
+  color: black;
+}
+
+.sidebar__hash {
+  margin-right: 10px;
+  margin-left: 5px;
+}
+
+.sidebar__bottom > p {
+  font-size: 13px;
+  padding-bottom: 10px;
 }
