--- a/src/Header.css
+++ b/src/Header.css
@@ -2,6 +2,7 @@
   top: 0;
   display: flex;
   position: sticky;
+  background-color: white;
   justify-content: space-evenly;
   border-bottom: 0.1px solid lightgray;
   padding-top: 10px;
