--- a/src/SideBar.css
+++ b/src/SideBar.css
@@ -5,7 +5,7 @@
   border-radius: 10px;
   height: fit-content;
   text-align: center;
-  max-width: 232px
+  max-width: 500px;
 }
 
 .sidebar__avatar {
